test/corpus/fail/actor-alias1.mo
=========
actor-alias1.mo
=========

//MOC-FLAG --actor-alias foo https://dfinity.org
//MOC-FLAG --actor-alias bar not_an_ic_url
//MOC-FLAG --actor-alias baz canister:baz

---

(source_file
  (line_comment)
  (line_comment)
  (line_comment))
